@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2023, Okke234
+ * Copyright (c) 2025, pajlada <https://github.com/pajlada>
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -28,39 +29,33 @@ import com.questhelper.collections.ItemCollections;
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
 import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemRequirement;
 import com.questhelper.requirements.player.CombatLevelRequirement;
-import com.questhelper.requirements.util.LogicType;
+import static com.questhelper.requirements.util.LogicHelper.and;
+import static com.questhelper.requirements.util.LogicHelper.or;
 import com.questhelper.requirements.var.VarbitRequirement;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.UnlockReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
-
-import java.util.*;
+import net.runelite.api.gameval.VarbitID;
 
 public class StrongholdOfSecurity extends BasicQuestHelper
 {
-	Requirement canSkipWar, canSkipFamine, canSkipPestilence,
-		notUsedCountCheck, nearCountCheck, inFloorWar, inFloorFamine, inFloorPestilence, inFloorDeath,
-		inStartRoomWar, inStartRoomFamine, inStartRoomPestilence,
-		notFlap, notSlap, notIdea, notStamp, hasFlap, hasSlap, hasIdea, hasStamp;
-
-	ItemRequirement food;
-	Zone countCheck, floorWar, floorFamine, floorPestilence, floorDeath, startRoomWar, startRoomFamine, startRoomPestilence;
-
-	QuestStep talkToCountCheck, enterStronghold, usePortalWar, usePortalFamine, usePortalPestilence;
-
-	DetailedQuestStep openChestWar, openChestFamine, openChestPestilence, openChestDeath,
-		enterFloorFamine, enterFloorPestilence, enterFloorDeath;
-
-	String[] answers = {
+	static final String[] CORRECT_ANSWERS = {
 		"No.",
 		"Me.",
 		"Nobody.",
@@ -82,87 +77,74 @@ public class StrongholdOfSecurity extends BasicQuestHelper
 		"Don't share your information and report the player.",
 		"Set up two-factor authentication with my email provider.",
 		"No, you should never allow anyone to level your account.",
+		"No, you should never allow anyone to use your account.",
 		"Authenticator and two-step login on my registered email.",
 		"No way! You'll just take my gold for your own! Reported!",
 		"Don't type in my password backwards and report the player.",
 		"Don't give them the information and send an 'Abuse report'.",
 		"Don't tell them anything and click the 'Report Abuse' button.",
 		"Politely tell them no and then use the 'Report Abuse' button.",
+		"Politely tell them no, then use the 'Report Abuse' button.",
 		"Don't give out your password to anyone. Not even close friends.",
 		"Do not visit the website and report the player who messaged you.",
 		"Report the stream as a scam. Real Jagex streams have a 'verified' mark.",
-		"Two-factor authentication on yuor account and your registered email.",
-		"Nope, you're tricking me into going somewhere dangerous."
+		"Two-factor authentication on your account and your registered email.",
+		"Nope, you're tricking me into going somewhere dangerous.",
+		"It's never used on other websites or accounts.",
 	};
 
-	int[] cbLevels = {26, 51, 76};
+	static final int CB_LEVEL_SKIP_WAR = 26;
+	static final int CB_LEVEL_SKIP_FAMINE = 51;
+	static final int CB_LEVEL_SKIP_PESTILENCE = 76;
 
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
+	// Recommended items
+	ItemRequirement food;
 
-		ConditionalStep goEnterStronghold = new ConditionalStep(this, enterStronghold);
-		goEnterStronghold.addStep(new Conditions(nearCountCheck, notUsedCountCheck), talkToCountCheck);
-		goEnterStronghold.addStep(new Conditions(new Conditions(LogicType.OR, canSkipWar, hasFlap),
-			inFloorWar, inStartRoomWar), usePortalWar);
-		goEnterStronghold.addStep(new Conditions(notFlap, inFloorWar), openChestWar);
-		goEnterStronghold.addStep(new Conditions(notStamp, inFloorWar), enterFloorFamine);
+	// Miscellaneous requirements
+	Requirement canSkipWar;
+	Requirement canSkipFamine;
+	Requirement canSkipPestilence;
+	Requirement notUsedCountCheck;
+	Requirement nearCountCheck;
+	Requirement inFloorWar;
+	Requirement inFloorFamine;
+	Requirement inFloorPestilence;
+	Requirement inFloorDeath;
+	Requirement inStartRoomWar;
+	Requirement inStartRoomFamine;
+	Requirement inStartRoomPestilence;
+	Requirement notFlap;
+	Requirement notSlap;
+	Requirement notIdea;
+	Requirement notStamp;
+	Requirement hasFlap;
+	Requirement hasSlap;
+	Requirement hasIdea;
+	Requirement hasStamp;
 
-		goEnterStronghold.addStep(new Conditions(new Conditions(LogicType.OR, canSkipFamine, hasSlap),
-			inFloorFamine, inStartRoomFamine), usePortalFamine);
-		goEnterStronghold.addStep(new Conditions(notSlap, inFloorFamine), openChestFamine);
-		goEnterStronghold.addStep(new Conditions(notStamp, inFloorFamine), enterFloorPestilence);
+	// Zones
+	Zone countCheck;
+	Zone floorWar;
+	Zone floorFamine;
+	Zone floorPestilence;
+	Zone floorDeath;
+	Zone startRoomWar;
+	Zone startRoomFamine;
+	Zone startRoomPestilence;
 
-		goEnterStronghold.addStep(new Conditions(new Conditions(LogicType.OR, canSkipPestilence, hasIdea),
-			inFloorPestilence, inStartRoomPestilence), usePortalPestilence);
-		goEnterStronghold.addStep(new Conditions(notIdea, inFloorPestilence), openChestPestilence);
-		goEnterStronghold.addStep(new Conditions(notStamp, inFloorPestilence), enterFloorDeath);
-
-		goEnterStronghold.addStep(new Conditions(notStamp, inFloorDeath), openChestDeath);
-
-		//TODO: Highlight warning confirmation when climbing down ladder
-		//TODO: Auto start when entering or when teleporting with Count Check?
-
-		steps.put(0, goEnterStronghold);
-
-		return steps;
-	}
-
-	@Override
-	protected void setupRequirements()
-	{
-		food = new ItemRequirement("Food", ItemCollections.GOOD_EATING_FOOD, -1);
-	}
-
-	public void setupConditions()
-	{
-		canSkipWar = new CombatLevelRequirement(cbLevels[0]);
-		canSkipFamine = new CombatLevelRequirement(cbLevels[1]);
-		canSkipPestilence = new CombatLevelRequirement(cbLevels[2]);
-
-		nearCountCheck = new ZoneRequirement(countCheck);
-		inFloorWar = new ZoneRequirement(floorWar);
-		inFloorFamine = new ZoneRequirement(floorFamine);
-		inFloorPestilence = new ZoneRequirement(floorPestilence);
-		inFloorDeath = new ZoneRequirement(floorDeath);
-		inStartRoomWar = new ZoneRequirement(startRoomWar);
-		inStartRoomFamine = new ZoneRequirement(startRoomFamine);
-		inStartRoomPestilence = new ZoneRequirement(startRoomPestilence);
-
-		notUsedCountCheck = new VarbitRequirement(5371, 0);
-		notFlap = new VarbitRequirement(2309, 0);
-		notSlap = new VarbitRequirement(2310, 0);
-		notIdea = new VarbitRequirement(2311, 0);
-		notStamp = new VarbitRequirement(2312, 0);
-		hasFlap = new VarbitRequirement(2309, 1);
-		hasSlap = new VarbitRequirement(2310, 1);
-		hasIdea = new VarbitRequirement(2311, 1);
-		hasStamp = new VarbitRequirement(2312, 1);
-	}
+	// Steps
+	QuestStep talkToCountCheck;
+	QuestStep enterStronghold;
+	QuestStep usePortalWar;
+	QuestStep usePortalFamine;
+	QuestStep usePortalPestilence;
+	DetailedQuestStep openChestWar;
+	DetailedQuestStep openChestFamine;
+	DetailedQuestStep openChestPestilence;
+	DetailedQuestStep openChestDeath;
+	DetailedQuestStep enterFloorFamine;
+	DetailedQuestStep enterFloorPestilence;
+	DetailedQuestStep enterFloorDeath;
 
 	@Override
 	protected void setupZones()
@@ -178,9 +160,38 @@ public class StrongholdOfSecurity extends BasicQuestHelper
 
 	}
 
+	@Override
+	protected void setupRequirements()
+	{
+		canSkipWar = new CombatLevelRequirement(CB_LEVEL_SKIP_WAR);
+		canSkipFamine = new CombatLevelRequirement(CB_LEVEL_SKIP_FAMINE);
+		canSkipPestilence = new CombatLevelRequirement(CB_LEVEL_SKIP_PESTILENCE);
+
+		nearCountCheck = new ZoneRequirement(countCheck);
+		inFloorWar = new ZoneRequirement(floorWar);
+		inFloorFamine = new ZoneRequirement(floorFamine);
+		inFloorPestilence = new ZoneRequirement(floorPestilence);
+		inFloorDeath = new ZoneRequirement(floorDeath);
+		inStartRoomWar = new ZoneRequirement(startRoomWar);
+		inStartRoomFamine = new ZoneRequirement(startRoomFamine);
+		inStartRoomPestilence = new ZoneRequirement(startRoomPestilence);
+
+		notUsedCountCheck = new VarbitRequirement(VarbitID.SOS_TELEPORTED_BY_COUNT, 0);
+		notFlap = new VarbitRequirement(VarbitID.SOS_EMOTE_FLAP, 0);
+		notSlap = new VarbitRequirement(VarbitID.SOS_EMOTE_DOH, 0);
+		notIdea = new VarbitRequirement(VarbitID.SOS_EMOTE_IDEA, 0);
+		notStamp = new VarbitRequirement(VarbitID.SOS_EMOTE_STAMP, 0);
+		hasFlap = new VarbitRequirement(VarbitID.SOS_EMOTE_FLAP, 1);
+		hasSlap = new VarbitRequirement(VarbitID.SOS_EMOTE_DOH, 1);
+		hasIdea = new VarbitRequirement(VarbitID.SOS_EMOTE_IDEA, 1);
+		hasStamp = new VarbitRequirement(VarbitID.SOS_EMOTE_STAMP, 1);
+
+		food = new ItemRequirement("Food", ItemCollections.GOOD_EATING_FOOD, -1);
+	}
+
 	public void setupSteps()
 	{
-		List<WorldPoint> pathFromStartToChest1 = Arrays.asList(
+		var pathFromStartToChest1 = List.of(
 			new WorldPoint(1859, 5243, 0),
 			new WorldPoint(1859, 5232, 0),
 			new WorldPoint(1864, 5227, 0),
@@ -194,7 +205,7 @@ public class StrongholdOfSecurity extends BasicQuestHelper
 			new WorldPoint(1905, 5228, 0)
 		);
 
-		List<WorldPoint> pathFromStartToChest2 = Arrays.asList(
+		var pathFromStartToChest2 = List.of(
 			new WorldPoint(2042, 5245, 0),
 			new WorldPoint(2034, 5244, 0),
 			new WorldPoint(2033, 5239, 0),
@@ -215,7 +226,7 @@ public class StrongholdOfSecurity extends BasicQuestHelper
 			new WorldPoint(2020, 5227, 0)
 		);
 
-		List<WorldPoint> pathFromStartToChest3 = Arrays.asList(
+		var pathFromStartToChest3 = List.of(
 			new WorldPoint(2123, 5252, 0),
 			new WorldPoint(2132, 5256, 0),
 			new WorldPoint(2132, 5261, 0),
@@ -229,7 +240,7 @@ public class StrongholdOfSecurity extends BasicQuestHelper
 			new WorldPoint(2147, 5291, 0)
 		);
 
-		List<WorldPoint> pathFromStartToChest4 = Arrays.asList(
+		var pathFromStartToChest4 = List.of(
 			new WorldPoint(2358, 5215, 0),
 			new WorldPoint(2356, 5216, 0),
 			new WorldPoint(2355, 5224, 0),
@@ -251,22 +262,22 @@ public class StrongholdOfSecurity extends BasicQuestHelper
 		talkToCountCheck.addDialogStep("Yes");
 
 		enterStronghold = new ObjectStep(this, ObjectID.SOS_DUNG_ENT_OPEN, new WorldPoint(3081, 3420, 0),
-			"Climb down the entrance to the Stronghold of Security.");
+			"Climb down the entrance to the Stronghold of Security in Barbarian Village, west of Varrock.");
 		enterFloorFamine = new ObjectStep(this, ObjectID.SOS_WAR_LADD_DOWN, new WorldPoint(1902, 5222, 0),
 			"Go to the 2nd floor of the stronghold.");
 		enterFloorFamine.setLinePoints(pathFromStartToChest1);
 		enterFloorFamine.setHideMinimapLines(true);
-		enterFloorFamine.addDialogSteps(answers);
+		enterFloorFamine.addDialogSteps(CORRECT_ANSWERS);
 		enterFloorPestilence = new ObjectStep(this, ObjectID.SOS_FAM_LADD_DOWN, new WorldPoint(2026, 5218, 0),
 			"Go to the 3rd floor of the stronghold.");
 		enterFloorPestilence.setLinePoints(pathFromStartToChest2);
 		enterFloorPestilence.setHideMinimapLines(true);
-		enterFloorPestilence.addDialogSteps(answers);
+		enterFloorPestilence.addDialogSteps(CORRECT_ANSWERS);
 		enterFloorDeath = new ObjectStep(this, ObjectID.SOS_PEST_LADD_DOWN, new WorldPoint(2148, 5284, 0),
 			"Go to the 4th floor of the stronghold.");
 		enterFloorDeath.setLinePoints(pathFromStartToChest3);
 		enterFloorDeath.setHideMinimapLines(true);
-		enterFloorDeath.addDialogSteps(answers);
+		enterFloorDeath.addDialogSteps(CORRECT_ANSWERS);
 
 		usePortalWar = new ObjectStep(this, ObjectID.SOS_WAR_PORTAL,
 			new WorldPoint(1863, 5238, 0), "Enter the portal.");
@@ -279,55 +290,107 @@ public class StrongholdOfSecurity extends BasicQuestHelper
 			new WorldPoint(1907, 5222, 0), "Claim 2k coins and the Flap emote.");
 		openChestWar.setLinePoints(pathFromStartToChest1);
 		openChestWar.setHideMinimapLines(true);
-		openChestWar.addDialogSteps(answers);
+		openChestWar.addDialogSteps(CORRECT_ANSWERS);
 
 		openChestFamine = new ObjectStep(this, ObjectID.SOS_FAM_SACK,
 			new WorldPoint(2021, 5216, 0), "Claim 3k coins and the Slap Head emote.");
 		openChestFamine.setLinePoints(pathFromStartToChest2);
 		openChestFamine.setHideMinimapLines(true);
-		openChestFamine.addDialogSteps(answers);
+		openChestFamine.addDialogSteps(CORRECT_ANSWERS);
+		openChestFamine.addSubSteps(enterFloorFamine, usePortalWar);
 
 		openChestPestilence = new ObjectStep(this, ObjectID.SOS_PEST_CHEST,
 			new WorldPoint(2144, 5280, 0), "Claim 5k coins and the Idea emote.");
 		openChestPestilence.setLinePoints(pathFromStartToChest3);
 		openChestPestilence.setHideMinimapLines(true);
-		openChestPestilence.addDialogSteps(answers);
+		openChestPestilence.addDialogSteps(CORRECT_ANSWERS);
+		openChestPestilence.addSubSteps(enterFloorPestilence, usePortalFamine);
 
 		openChestDeath = new ObjectStep(this, ObjectID.SOS_DEATH_PRAM,
 			new WorldPoint(2344, 5214, 0), "Claim Fancy boots or Fighting boots, and the Stamp emote.");
 		openChestDeath.setLinePoints(pathFromStartToChest4);
 		openChestDeath.setHideMinimapLines(true);
-		openChestDeath.addDialogSteps(answers);
+		openChestDeath.addDialogSteps(CORRECT_ANSWERS);
+		openChestDeath.addSubSteps(enterFloorDeath, usePortalPestilence);
+	}
+
+	@Override
+	public Map<Integer, QuestStep> loadSteps()
+	{
+		initializeRequirements();
+		setupSteps();
+
+		var steps = new HashMap<Integer, QuestStep>();
+
+		var goEnterStronghold = new ConditionalStep(this, enterStronghold);
+		goEnterStronghold.addStep(and(nearCountCheck, notUsedCountCheck), talkToCountCheck);
+		goEnterStronghold.addStep(and(or(canSkipWar, hasFlap),
+			inFloorWar, inStartRoomWar), usePortalWar);
+		goEnterStronghold.addStep(and(notFlap, inFloorWar), openChestWar);
+		goEnterStronghold.addStep(and(notStamp, inFloorWar), enterFloorFamine);
+
+		goEnterStronghold.addStep(and(or(canSkipFamine, hasSlap),
+			inFloorFamine, inStartRoomFamine), usePortalFamine);
+		goEnterStronghold.addStep(and(notSlap, inFloorFamine), openChestFamine);
+		goEnterStronghold.addStep(and(notStamp, inFloorFamine), enterFloorPestilence);
+
+		goEnterStronghold.addStep(and(or(canSkipPestilence, hasIdea),
+			inFloorPestilence, inStartRoomPestilence), usePortalPestilence);
+		goEnterStronghold.addStep(and(notIdea, inFloorPestilence), openChestPestilence);
+		goEnterStronghold.addStep(and(notStamp, inFloorPestilence), enterFloorDeath);
+
+		goEnterStronghold.addStep(and(notStamp, inFloorDeath), openChestDeath);
+
+		//TODO: Highlight warning confirmation when climbing down ladder
+		//TODO: Auto start when entering or when teleporting with Count Check?
+
+		steps.put(0, goEnterStronghold);
+
+		return steps;
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRecommended()
 	{
-		return Collections.singletonList(food);
+		return List.of(
+			food
+		);
+	}
+
+	public List<ItemReward> getItemRewards()
+	{
+		return List.of(
+			new ItemReward("Coins", ItemID.COINS, 10000),
+			new ItemReward("Fancy or Fighting boots", ItemID.SOS_BOOTS, 1)
+		);
 	}
 
 	@Override
 	public List<UnlockReward> getUnlockRewards()
 	{
-		return Collections.singletonList(new UnlockReward("Flap, Slap Head, Idea and Stamp emotes."));
+		return List.of(
+			new UnlockReward("Flap, Slap Head, Idea and Stamp emotes.")
+		);
 	}
 
-	public List<ItemReward> getItemRewards()
-	{
-		return Arrays.asList(
-			new ItemReward("Coins", ItemID.COINS, 10000),
-			new ItemReward("Fancy or Fighting boots", ItemID.SOS_BOOTS, 1));
-	}
-
-	// Maybe a little unnecessary...
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
+		var steps = new ArrayList<PanelDetails>();
 
-		allSteps.add(new PanelDetails("Entering the stronghold", Arrays.asList(talkToCountCheck, enterStronghold)));
-		allSteps.add(new PanelDetails("Claiming coins", Arrays.asList(openChestWar, openChestFamine, openChestPestilence)));
-		allSteps.add(new PanelDetails("Claiming boots", Collections.singletonList(openChestDeath)));
-		return allSteps;
+		steps.add(new PanelDetails("Entering the stronghold", List.of(
+			talkToCountCheck,
+			enterStronghold
+		)));
+		steps.add(new PanelDetails("Claiming coins", List.of(
+			openChestWar,
+			openChestFamine,
+			openChestPestilence
+		)));
+		steps.add(new PanelDetails("Claiming boots", List.of(
+			openChestDeath
+		)));
+
+		return steps;
 	}
 }
